--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,9 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
-    />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Arapey:ital@0;1&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-<link href="https://fonts.cdnfonts.com/css/made-evolve-sans" rel="stylesheet">
-                
+    /><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">          
     
     <title>React App</title>
   </head>
